--- a/configure.in
+++ b/configure.in
@@ -35,9 +35,11 @@ AC_PROG_LIBTOOL
 AC_PROG_INSTALL
 AC_STDC_HEADERS
 AC_PATH_PROG(RM, rm, /bin/rm)
+AC_PATH_PROG(CP, cp, /bin/cp)
 AC_PATH_PROG(MV, mv, /bin/mv)
 AC_PATH_PROG(TAR, tar, /bin/tar)
-
+AC_PATH_PROG(HELP2MAN, help2man)
+AC_PATH_PROG(MAN2HTML, man2html)
 
 dnl Make sure we have an ANSI compiler
 AM_C_PROTOTYPES
