--- a/Makefile.am
+++ b/Makefile.am
@@ -105,6 +105,10 @@ check-dsig: $(TEST_APP)
 	@($(PRECHECK_COMMANDS) && \
 	$(SHELL) ./tests/testDSig.sh default tests $$ABS_BUILDDIR/$(top_builddir)/$(TEST_APP) der)
 
+check-xkms: $(TEST_APP) 	
+	@($(PRECHECK_COMMANDS) && \
+	$(SHELL) ./tests/testXKMS.sh default tests $$ABS_BUILDDIR/$(top_builddir)/$(TEST_APP) der)
+
 check-enc: $(TEST_APP) 
 	@($(PRECHECK_COMMANDS) && \
 	$(SHELL) ./tests/testEnc.sh default tests $$ABS_BUILDDIR/$(TEST_APP) der)
