created string2int and string2 helper klasses added KeyUseWith list to the
        * include/xmlsec/xmltree.h src/xmltree.c: created string2int and string2        helper klasses
        * include/xmlsec/keys.h src/keyinfo.c src/keys.c: added KeyUseWith list
        to the KeyReq object
        * include/xmlsec/strings.h src/strings.c: added some xkms strings
        * include/xmlsec/xkms.h src/xkms.c: LocateRequest (except signatures)         and most of LocateResult

--- a/configure.in
+++ b/configure.in
@@ -75,8 +75,8 @@ if test "z$enable_development" = "zyes" -o "z${LOGNAME}" = "zaleksey" ; then
     enable_xkms="yes"
     enable_debuging="yes"
     enable_pedantic="yes"
-#    enable_static_linking="yes"
-#    enable_crypto_dl="no"
+    enable_static_linking="yes"
+    enable_crypto_dl="no"
     AC_MSG_RESULT(yes)
 else
     AC_MSG_RESULT(no)
