created new --xkms-format parameter (plain/soap-1.1/soap-1.2) move
        * apps/xmlsec.c: created new --xkms-format parameter
        (plain/soap-1.1/soap-1.2)
        * configure.in xmlsec.spec.in include/xmlsec/Makefile.am
        include/xmlsec/private/*: move internal xkms declarations to
        a newly created "xmlsec/private" includes folder
        * include/xmlsec/strings.h include/xmlsec/xkms.h
        src/strings.c src/xkms.c tests/testXKMS.sh: preparation for soap
        request/response suppport

--- a/configure.in
+++ b/configure.in
@@ -1094,6 +1094,7 @@ include/xmlsec/version.h
 Makefile
 include/Makefile
 include/xmlsec/Makefile
+include/xmlsec/private/Makefile
 src/Makefile
 apps/Makefile
 docs/Makefile
