--- a/config.h.in
+++ b/config.h.in
@@ -212,7 +212,7 @@
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
 
-/* Define to 1 if the C compiler supports function prototypes. */
+/* Define if compiler has function prototypes */
 #undef PROTOTYPES
 
 /* The size of a `size_t', as computed by sizeof. */
@@ -220,9 +220,6 @@
 
 /* Define to 1 if you have the ANSI C header files. */
 #undef STDC_HEADERS
-
-/* Define like PROTOTYPES; this can be used by system headers. */
-#undef __PROTOTYPES
 
 /* Define to empty if `const' does not conform to ANSI C. */
 #undef const
