--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -235,7 +235,7 @@ XMLSEC_NSS_OBJS = \
 	$(XMLSEC_NSS_INTDIR)\x509.obj\
 	$(XMLSEC_NSS_INTDIR)\x509vfy.obj\
 	$(XMLSEC_NSS_INTDIR)\keysstore.obj\
-	$(XMLSEC_NSS_INTDIR)\kt_rsa.obj\
+	$(XMLSEC_NSS_INTDIR)\keytrans.obj\
 	$(XMLSEC_NSS_INTDIR)\kw_des.obj\
 	$(XMLSEC_NSS_INTDIR)\kw_aes.obj\
 	$(XMLSEC_NSS_INTDIR)\strings.obj
